Design Scan cardId and shot image

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   # ----- Firebase -----
   firebase_core: ^1.0.4
+  tflite_flutter: ^0.8.0
   firebase_ml_vision: ^0.12.0+1
-  # ----- Utils -----
-  image_picker: ^0.7.4
+  # ----- Image -----
+  camera: ^0.8.1
+  image: ^3.0.2
+  # ----- Path -----
+  path_provider:
+  path: ^1.8.0
+  # ----- Fonts -----
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -39,8 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/mobilefacenet.tflite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
