--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  # ----- Firebase -----
-  firebase_core: ^1.0.4
-  firebase_ml_vision: ^0.12.0+1
+  # ----- BlinkId -----
+  blinkid_flutter: ^5.11.0
   # ----- Utils -----
   image_picker: ^0.7.4
+  # ----- State management -----
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
