--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   path: ^1.8.0
   # ----- Fonts -----
   auto_size_text: ^2.1.0
+  # ----- Animations -----
+  lottie: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/mobilefacenet.tflite
+    - assets/scan_card.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
