--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   tflite_flutter: ^0.8.0
   firebase_ml_vision: ^0.12.0+1
   # ----- Image -----
-  camera: ^0.8.1
+  camera: ^0.5.8+5
   image: ^3.0.2
+  image_size_getter: ^1.0.0
   # ----- Path -----
   path_provider: ^2.0.1
   path: ^1.8.0
