--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
   assets:
     - assets/mobilefacenet.tflite
     - assets/scan_card.json
+    - assets/take_selfie.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
