--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   image: ^3.0.2
   image_size_getter: ^1.0.0
   image_picker: ^0.7.4
+  image_gallery_saver: ^1.6.9
   # ----- Path -----
   path_provider: ^2.0.1
   path: ^1.8.0
+  dio: ^4.0.0
   # ----- Fonts -----
   auto_size_text: ^2.1.0
   google_fonts: ^2.0.0
